feat: OPTIONS 请求

--- a/chatAbout/前端物语-常识.md
+++ b/chatAbout/前端物语-常识.md
@@ -46,6 +46,16 @@
   - 500：服务器内部错误
   - 503：服务器挂了
 
+#### OPTIONS 请求
+
+客户端将请求分为了两种：**简单请求**和**非简单请求**。当请求为非简单请求时，就会触发浏览器发送预检请求，这是浏览器的行为。非简单请求包含：
+
+- 跨域请求，非跨域请求不会出现 options 请求
+- 自定义请求头
+- 发送 json 格式的数据（content-type: application/json）
+
+预检请求会向服务器确认跨域是否允许，服务返回的响应头里有对应字段 **Access-Control-Allow-Origin** 来给浏览器判断：如果允许，浏览器紧接着发送实际请求；不允许，报错并禁止客户端脚本读取响应相关的任何东西。
+
 #### 常见 HTTP 的 Header
 
 ```bash
