feat：补充两个状态码

--- a/chatAbout/前端物语-常识.md
+++ b/chatAbout/前端物语-常识.md
@@ -33,6 +33,7 @@
 
 - 2 \*\*：成功
   - 200：一切 ok
+  - 204：请求成功，但不需要返回任何实体内容
 - 3 \*\*：重定向
   - 301：永久重定向
   - 302：临时重定向
@@ -45,6 +46,7 @@
 - 5 \*\*：服务端错误
   - 500：服务器内部错误
   - 503：服务器挂了
+  - 504：网关超时
 
 #### OPTIONS 请求
 
