--- a/interview/前端进阶-丙.md
+++ b/interview/前端进阶-丙.md
@@ -147,7 +147,7 @@ testW.mycall(w, "nihao", "wgc");
 testW.myapply(w, ["NIHAO", "WGC"]);
 ```
 
-##### 手写 new
+#### 手写 new
 
 ```javascript
 const myNew = function () {
@@ -174,7 +174,7 @@ console.log("newFun:", newFun);
 console.log("myNewFun:", myNewFun);
 ```
 
-##### 手写 instanceOf
+#### 手写 instanceOf
 
 ```javascript
 const myInstanceof = function (left, right) {
@@ -199,6 +199,41 @@ console.log(myInstanceof([], Object));
 console.log(myInstanceof(1, Number));
 console.log(myInstanceof("wgc", String));
 console.log(myInstanceof(undefined, Boolean));
+```
+
+#### 手写 const
+
+```javascript
+function _const(key, value) {
+  window[key] = value;
+  Object.defineProperty(window, key, {
+    enumerable: false, // 是否可以在 for…in 循环和 Object.keys() 中被枚举
+    configurable: false, // 对象属性是否可以被删除
+    get: function () {
+      return value;
+    },
+    set: function (newValue) {
+      if (newValue !== window[key]) {
+        throw new TypeError("Assignment to constant variable.");
+      } else {
+        return value;
+      }
+    }
+  });
+}
+// 测试
+_const("a", 10);
+console.log(a);
+delete window.a;
+console.log(a);
+for (let item in window) {
+  // 因为const定义的属性在global下也是不存在的，所以用到了enumerable: false来模拟这一功能
+  if (item === "a") {
+    // 因为不可枚举，所以不执行
+    console.log(window[item]);
+  }
+}
+a = 20; // 报错
 ```
 
 #### 手写函数柯里化
