refactor: 更新 Math 数学对象

--- a/interview/前端基础-甲.md
+++ b/interview/前端基础-甲.md
@@ -103,13 +103,12 @@ console.log(valC); // 42
 
 ##### Math 数学对象：
 
--` ceil(数值)`向下取整
-
+- `ceil(数值)`向下取整
 - `floor(数值)`向上取整
+- `round(数值)`四舍五入取整
+- `random()`获取 0 到 1 之间的随机浮点数
 - `min(num1,num2)`/`max(num1,num2)`返回最大最小值
 - `pow(x,n)`返回 x 的 n 次方
-- `random()`
-- `round(数值)`四舍五入
 - `sqrt(数值)`开平方
 
 #### `Window` 对象
