refactor: 更新 javascript 变量提升

--- a/interview/前端基础-甲.md
+++ b/interview/前端基础-甲.md
@@ -16,46 +16,40 @@
 
 #### javascript 变量提升
 
-```
-对于变量 var x = 1; foo();
-
-等同var x; foo(); x = 1;（提升变量声明，但不提升赋值）
-
-对于函数 function fun(){};
-
-函数本身也是一种变量，也会存在变量上升的现象，但是它是上升了整个函数
+> 对于变量 `var x = 1; foo()`;
+> 等同 `var x; foo(); x = 1;`（提升变量声明，但不提升赋值）
+> 对于函数 `function fun(){}`;
+> 函数本身也是一种变量，也会存在变量上升的现象，但是它是上升了整个函数
 
 分析这种问题的时候，有意识拆分变量声明和赋值，提升函数位置会看得更明显
-```
 
 > 函数提升优先级高于变量提升，且不会被同名变量声明覆盖，但是会被变量赋值后覆盖。而且存在同名函数与同名变量时，优先执行函数。
 
 ```js
 console.log(a); // f a()
 console.log(a()); // 1
-var a = 1;
+var a = 2;
 function a() {
   console.log(1);
 }
-console.log(a); // 1
+console.log(a); // 2
 a = 3;
-console.log(a()); // a not a function
+console.log(a()); // TypeError: a is not a function
 ```
 
 变量提升后相当于
 
 ```js
-var a = function () {
-  // 声明一个变量a指向
-  console.log(1);
-};
 var a;
-console.log(a); // 如果a不优先执行含函数，这里是返回undefined;
-console.log(a());
-a = 1; // 这里函数与变量
-console.log(a);
+var a = function () {
+  console.log(1);
+}; // 声明一个变量a指向
+console.log(a); // f a()
+console.log(a()); // 1
+a = 2; // 这里函数与变量
+console.log(a); // 2
 a = 3;
-console.log(a());
+console.log(a()); // TypeError: a is not a function
 ```
 
 #### 运算符 `&` 与 `&&` 和 `|` 与 `||`
