refactor: 更新 hooks

--- a/interview/前端进阶-乙.md
+++ b/interview/前端进阶-乙.md
@@ -1072,13 +1072,17 @@ const [num, setNum] = useState(0);
 
 #### useEffect
 
-可以把 `useEffect` Hook 看做 `componentDidMount`，`componentDidUpdate` 和 `componentWillUnmount` 这三个函数的组合。可以利用这个函数来执行一些副作用，比如 `ajax` 请求、访问原生 `dom` 元素、本地持久化缓存、绑定/解绑事件、添加订阅、设置定时器、记录日志等。
+可以把 `useEffect` Hook 看做 `componentDidMount`，`componentDidUpdate` 和 `componentWillUnmount` 这三个函数的组合。可以利用这个函数来执行一些副作用，比如 `ajax` 请求、本地持久化缓存、绑定/解绑事件、添加订阅、设置定时器、记录日志等。
 
 ##### 模拟 componentDidMount 和 componentDidUpdate
 
 ```javascript
-useEffect(() => {
-  document.title = `你点击了${number}次`;
+const [data, setData] = useState({ hits: [] });
+
+useEffect(async () => {
+  const result = await axios("http://localhost/api/v1/search?query=redux");
+
+  setData(result.data);
 });
 ```
 
@@ -1149,6 +1153,15 @@ function FriendStatusWithCounter(props) {
   // ...
 }
 ```
+
+#### useLayoutEffect
+
+使用方式和 `useEffect` 相，他们都接受一个函数一个数组，只有在数组里面的值改变的情况下才会再次执行 `effect`。
+
+##### 差异
+
+- `useEffect` 是渲染完成后异步执行的，而 `useLayoutEffect` 是渲染之前同步执行的。
+- `useEffect` 的执行时机是浏览器完成渲染之后，而 `useLayoutEffect` 的执行时机是浏览器把内容真正渲染到界面之前，和 `componentDidMount` 等价。
 
 #### useReducer
 
