refactor: 更新手写 Array 相关

--- a/interview/前端进阶-丁.md
+++ b/interview/前端进阶-丁.md
@@ -108,12 +108,11 @@ Array.prototype.flat = function () {
 
 ```javascript
 Array.prototype.reduce = function (fn, initialValue) {
-  const arr = Array.prototype.slice.call(this);
-  let ans = initialValue ? initialValue : arr[0];
+  let ans = initialValue ? initialValue : this[0];
   let startIndex = initialValue ? 0 : 1;
-  for (let i = startIndex; i < arr.length; i++) {
+  for (let i = startIndex; i < this.length; i++) {
     // reduce 的四个参数累计器、当前值、当前索引、源数组
-    ans = fn.call(null, ans, arr[i], i, this);
+    ans = fn.call(null, ans, this[i], i, this);
   }
   return ans;
 };
@@ -123,11 +122,10 @@ Array.prototype.reduce = function (fn, initialValue) {
 
 ```javascript
 Array.prototype.map = function (fn, context) {
-  const arr = Array.prototype.slice.call(this);
   const ans = [];
-  for (let i = 0; i < arr.length; i++) {
+  for (let i = 0; i < this.length; i++) {
     // map callback 的三个参数当前值、当前索引、源数组
-    ans.push(fn.call(context, arr[i], i, this));
+    ans.push(fn.call(context, this[i], i, this));
   }
   return ans;
 };
