fix: 修正 JS 的数据类型

--- a/interview/前端基础-甲.md
+++ b/interview/前端基础-甲.md
@@ -407,12 +407,12 @@ function quickSort(arr) {
 
 #### JS 的数据类型
 
-- undefined
-- object
-- boolean
 - string
 - number
-- function
+- boolean
+- object
+- null
+- undefined
 - Symbol `ES6`
 - BigInt `ES10`
 
