feat: 箭头函数普通函数区别

--- a/interview/前端基础-乙.md
+++ b/interview/前端基础-乙.md
@@ -67,6 +67,77 @@ target; // {a:1, b:2, c:3}
 - Classes（类）
 - Modules（模块）
 
+#### 箭头函数普通函数区别
+
+##### 箭头函数作为匿名函数，不能使用 new
+
+```javascript
+var B = () => console.log("arrow function.");
+var b = new B(); // TypeError: B is not a constructor
+```
+
+##### 箭头函数不绑定 arguments，使用 ... 解构参数
+
+```javascript
+function A(a) {
+  console.log(arguments); // [object Arguments]
+}
+var B = (b) => console.log(arguments); // ReferenceError: arguments is not defined
+var C = (...rest) => console.log(rest);
+```
+
+##### 箭头函数会捕获其所在上下文的 this 值，作为自己的 this
+
+```javascript
+var obj = {
+  a: 10,
+  b: function () {
+    console.log(this.a); // 10
+  },
+  c: () => {
+    console.log(this.a); // undefined
+  },
+  d: function () {
+    return () => {
+      console.log(this.a); // 10
+    };
+  }
+};
+obj.b();
+obj.c();
+obj.d()();
+```
+
+##### call、apply 对箭头函数的 this 没有影响
+
+```javascript
+var obj = {
+  a: 10,
+  b: function (val) {
+    const func = (v) => v + this.a;
+    return func(val);
+  },
+  c: function (val) {
+    const temp = { a: 20 };
+    const func = (v) => v + this.a;
+    return func.call(temp, val);
+  }
+};
+console.log(obj.b(1)); // 11
+console.log(obj.c(1)); // 11
+```
+
+##### 箭头函数没有原型属性
+
+```javascript
+var a = () => console.log("arrow function.");
+function b() {
+  console.log("normal function.");
+}
+console.log(a.prototype); // undefined
+console.log(b.prototype); // object
+```
+
 #### axios 特色
 
 - 浏览器端发起 `XMLHttpRequests` 请求
